--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">CollectionCard</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">My cards</string>
-    <string name="title_notifications">Profile</string>
+    <string name="title_profile">Profile</string>
 </resources>
