--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">My cards</string>
     <string name="title_profile">Profile</string>
+    <string name="image_text">Illustration de collection de cartes</string>
+    <string name="button_home">Tape ici pour commencer</string>
+    <string name="subtile_home">Explorez, collectionnez et organisez vos cartes préférées !</string>
 </resources>
