--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="image_text">Illustration de collection de cartes</string>
     <string name="button_home">Tape ici pour commencer</string>
     <string name="subtile_home">Explorez, collectionnez et organisez vos cartes préférées !</string>
+    str
 </resources>
