--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="title_home">Accueil</string>
     <string name="title_dashboard">Pokédex</string>
     <string name="title_profile">Profile</string>
-    <string name="image_text">Illustration de collection de cartes</string>
+    <string name="image_text">Titre</string>
     <string name="button_home">Tape ici pour commencer</string>
-    <string name="subtile_home">Explorez, collectionnez et organisez vos cartes préférées !</string>
+    <string name="subtile_home">Explorez et Recherchez vos pokémons préférés !</string>
     str
 </resources>
