--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Pokédex</string>
-    <string name="title_home">Accueil</string>
+    <string name="title_home">Welcome !</string>
     <string name="title_dashboard">Pokédex</string>
-    <string name="title_profile">Profile</string>
-    <string name="image_text">Titre</string>
-    <string name="button_home">Tape ici pour commencer</string>
-    <string name="subtile_home">Explorez et Recherchez vos pokémons préférés !</string>
+    <string name="title_profile">Profil</string>
+    <string name="image_text">Title</string>
+    <string name="button_home">Tap here to start</string>
+    <string name="subtile_home">Explore and find your favorite pokémon !</string>
     <string name="pokemon_image">Pokemon image</string>
     <string name="pokemon_image_description">La description de ce pokemon n\'est pas disponible\n</string>
 </resources>
